tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/deci_to_int.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
const x:int = 5.5

